syntax = "proto3";
option go_package = "Chit_Chat/grpc/proto";


message AdminRequest {
  string client_id = 1;
  string content = 2;
  int64 logical_time = 3;
}

message AdminRelease {
  string client_id = 1;
  string content = 2;
  int64 logical_time = 3;
}

message Reply {
  string cleint_id = 1;
  bool reply = 2;
  int64 logical_time = 3;
}

message ack {
  bool success = 1;
  string error = 2;
  int64 logical_time = 3;

}

message empty {

}

service Mutual_Exclusion {

  rpc Request(AdminRequest) returns (Reply);

  rpc Release(AdminRelease) returns (Reply);

}
